src/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NamePr__c</fullName>
        <label>NamePr</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{000000}</displayFormat>
        <label>Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>